# iac-pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
scripts/: iac_pre_commit_hook.py  pre-commit-hook.sh  pre_commit_hook.py  zscaler_iac_scanner.py
