[metadata]
name = scripts
version = 0.0.1
description = Zscaler IaC scanning pre commit hook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZscalerCWP/iac-pre-commit-hooks
author = Abhijeet Rawat
author_email = abhijeet.rawat@zscaler.com

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    toml
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    zscaler-iac-scanner = scripts.zscaler_iac_scanner:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false